--- a/application/pom.xml
+++ b/application/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>business_logic</artifactId>
+    <artifactId>application</artifactId>
 
 
 </project>
