--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -10,6 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dao</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.miri</groupId>
+            <artifactId>entities</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
