--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>entities</module>
         <module>application</module>
         <module>dao</module>
+        <module>services</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -73,6 +74,7 @@
                 <artifactId>spring-session-data-redis</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>com.miri</groupId>
                 <artifactId>dao</artifactId>
@@ -103,91 +105,3 @@
 
 
 </project>
-
-
-
-
-        <!--<?xml version="1.0" encoding="UTF-8"?>-->
-<!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-         <!--xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
-    <!--<modelVersion>4.0.0</modelVersion>-->
-
-    <!--<groupId>com.miri</groupId>-->
-    <!--<artifactId>coupon</artifactId>-->
-    <!--<version>0.0.1-SNAPSHOT</version>-->
-    <!--<modules>-->
-        <!--<module>entities</module>-->
-        <!--<module>dao</module>-->
-        <!--<module>application</module>-->
-    <!--</modules>-->
-    <!--<packaging>pom</packaging>-->
-
-    <!--<name>coupon</name>-->
-    <!--<description>Demo project for Spring Boot</description>-->
-
-    <!--<parent>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
-        <!--<version>2.0.3.RELEASE</version>-->
-        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
-    <!--</parent>-->
-
-    <!--<properties>-->
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-        <!--<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
-        <!--<java.version>1.8</java.version>-->
-        <!--<spring.version>2.0.3.RELEASE</spring.version>-->
-    <!--</properties>-->
-    <!--<dependencyManagement>-->
-        <!--<dependencies>-->
-            <!--<dependency>-->
-                <!--<groupId>com.miri</groupId>-->
-                <!--<artifactId>entities</artifactId>-->
-                <!--<version>0.0.1-SNAPSHOT</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-starter-actuator</artifactId>-->
-                <!--<version>${spring.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-                <!--<version>${spring.version}</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>mysql</groupId>-->
-                <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-starter-web</artifactId>-->
-                <!--<version>${spring.version}</version>-->
-            <!--</dependency>-->
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-devtools</artifactId>-->
-                <!--<version>${spring.version}</version>-->
-                <!--<scope>runtime</scope>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-starter-test</artifactId>-->
-                <!--<version>${spring.version}</version>-->
-                <!--<scope>test</scope>-->
-            <!--</dependency>-->
-        <!--</dependencies>-->
-    <!--</dependencyManagement>-->
-
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
-
-
-<!--</project>-->
