--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.datasource.url = jdbc:mysql://localhost:3306/coupons?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
+logging.level.org.springframework.web=ERROR
+#logging.level.com.howtodoinjava=DEBUG
+
+#output to a temp_folder/file
+logging.file=./application.log
+
+# Logging pattern for the console
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
