--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8080
 spring.jpa.show-sql = true
 
 # auto updates DB schema
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 # data source
 spring.datasource.url = jdbc:mysql://localhost:3306/coupons?useSSL=false
@@ -12,7 +12,6 @@ spring.datasource.username = root
 spring.datasource.password = root
 
 logging.level.org.springframework.web=ERROR
-#logging.level.com.howtodoinjava=DEBUG
 
 #output to a temp_folder/file
 logging.file=./application.log
